Fixed Counter out of bounds (fixes #43)

--- a/themes/sti/static/stylesheets/site.css
+++ b/themes/sti/static/stylesheets/site.css
@@ -1815,7 +1815,7 @@ a {
 .counter-button {
   position: relative;
   margin-top: 0px;
-  max-width: 162px;
+  width: 142px;
   border: none;
   border-radius: 5px;
   background-color: #ff8913;
@@ -1844,7 +1844,8 @@ a {
       background: rgba(255, 255, 255, 0.2); }
   @media (min-width: 640px) {
     .counter-button {
-      top: -2rem; } }
+      top: -2rem;
+      width: 142px; } }
 
 .counter-message {
   display: block;
@@ -1862,9 +1863,13 @@ a {
   margin-bottom: 1.5rem;
   margin-top: 0px !important;
   margin-bottom: 0px !important;
-  padding-top: 0.8rem;
+  padding-top: 0;
   padding-left: 1rem !important;
-  padding-right: 1rem !important; }
+  padding-right: 1rem !important;
+  top: -2rem; }
+  @media (min-width: 640px) {
+    .counter-message {
+      padding-top: 0.8rem; } }
 
 .counter-message-description, .counter-days-left-description {
   display: block;
@@ -1883,33 +1888,50 @@ a {
   margin-top: -0.4rem !important;
   margin-bottom: 0px !important;
   line-height: 1rem !important;
-  padding-left: 1rem;
-  padding-right: 0.2rem; }
+  padding-left: 0.2rem;
+  padding-right: 0.2rem;
+  padding-bottom: 6rem; }
+  @media (min-width: 640px) {
+    .counter-message-description, .counter-days-left-description {
+      margin-top: -0.4rem !important;
+      margin-bottom: 0px !important;
+      line-height: 1rem !important;
+      padding-left: 1rem;
+      padding-right: 0.2rem;
+      padding-bottom: 0; } }
 
 .counter-days-left {
-  display: block;
-  font-family: "Montserrat-Regular", sans-serif;
-  font-weight: 400;
-  text-align: center;
-  font-size: 43px;
-  line-height: 60px;
-  margin-top: 30px;
-  margin-bottom: 30px;
-  font-size: 2.15rem;
-  line-height: 3rem;
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-  margin-top: 0px !important;
-  margin-bottom: 0px !important;
-  padding-top: 0.8rem;
-  padding-left: 0;
-  padding-right: 0; }
+  display: none; }
+  @media (min-width: 640px) {
+    .counter-days-left {
+      display: block;
+      font-family: "Montserrat-Regular", sans-serif;
+      font-weight: 400;
+      text-align: center;
+      font-size: 43px;
+      line-height: 60px;
+      margin-top: 30px;
+      margin-bottom: 30px;
+      font-size: 2.15rem;
+      line-height: 3rem;
+      margin-top: 1.5rem;
+      margin-bottom: 1.5rem;
+      margin-top: 0px !important;
+      margin-bottom: 0px !important;
+      padding-top: 0.8rem;
+      padding-left: 0;
+      padding-right: 0;
+      padding-bottom: 0; } }
 
 .counter-days-left-description {
-  text-align: center;
-  padding-left: 0;
-  padding-right: 0;
-  padding-bottom: 142px; }
+  display: none; }
+  @media (min-width: 640px) {
+    .counter-days-left-description {
+      display: block;
+      text-align: center;
+      padding-left: 0;
+      padding-right: 0;
+      padding-bottom: 142px; } }
 
 .home__info {
   background-color: #89D3F6; }
